fix: empty-swimlane cards stretched by image

--- a/src/assets/scss/_fachportal.scss
+++ b/src/assets/scss/_fachportal.scss
@@ -543,7 +543,8 @@ app-report-problem {
         }
       }
 
-      .empty-swimlane {
+      .widget-content {
+        max-width: 275px;
       }
     }
 
